# dynamixel-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: analysis.rs  create_lib.rs  download.rs  main.rs  serialize.rs
tables/AX/: ax-12a.csv  ax-12w.csv  ax-18a.csv
tables/DX/: dx-113.csv  dx-116.csv  dx-117.csv
tables/EX/: ex-106+.csv
tables/MX/: mx-106-2.csv  mx-106.csv  mx-12w.csv  mx-28-2.csv  mx-28.csv  mx-64-2.csv  mx-64.csv
tables/P/: ph42-020-s300-r.csv  ph54-100-s500-r.csv  ph54-200-s500-r.csv  pm42-010-s260-r.csv  pm54-040-s250-r.csv  pm54-060-s250-r.csv
tables/PRO/: h42-20-s300-r.csv  h42-20-s300-ra.csv  h54-100-s500-r.csv  h54-100-s500-ra.csv  h54-200-s500-r.csv  h54-200-s500-ra.csv  l42-10-s300-r.csv  l54-30-s400-r.csv  l54-30-s500-r.csv  l54-50-s290-r.csv  l54-50-s500-r.csv  m42-10-s260-r.csv  m42-10-s260-ra.csv  m54-40-s250-r.csv  m54-40-s250-ra.csv  m54-60-s250-r.csv  m54-60-s250-ra.csv
tables/RX/: rx-10.csv  rx-24f.csv  rx-28.csv  rx-64.csv
tables/X/: 2xc430-w250.csv  2xl430-w250.csv  xc430-w150.csv  xc430-w240.csv  xh430-v210.csv  xh430-v350.csv  xh430-w210.csv  xh430-w350.csv  xh540-v150.csv  xh540-v270.csv  xh540-w150.csv  xh540-w270.csv  xl320.csv  xl330-m077.csv  xl330-m288.csv  xl430-w250.csv  xm430-w210.csv  xm430-w350.csv  xm540-w150.csv  xm540-w270.csv  xw540-t140.csv  xw540-t260.csv
