[package]
name = "dynamixel-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = "1.0.125"
serde_yaml = "0.8.17"
threadpool = "1.8.1"
