[package]
name = "dynamixel-scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
scraper = "0.12.0"
serde = "1.0.126"
serde_yaml = "0.8.17"
convert_case = "0.4.0"
futures-util = "0.3.15"
tokio = { version = "1.6.0", features = ["full"] }
tokio-stream = "0.1.6"
anyhow = "1.0.40"
regex = "1.5.4"
clap = "2.33.3"
ron = "0.6.4"
